date validation, price validation, form overlapping issue solved

--- a/styles.css
+++ b/styles.css
@@ -3,9 +3,17 @@ table tr td {
   font-weight: bold;
   border: inset;
 }
+
+
+#table-body {
+  max-height: 400px;
+  overflow-y: auto;
+}
+
 .field-container {
   display: flex;
   border-radius: 5px;
+  /* justify-content: space-between; */
 }
 
 #show-price {
@@ -29,13 +37,15 @@ table tr td {
 
 .flight-container {
   background-color: lightgrey;
-  border: solid;
+  border: solid 1px;
+  
 }
 .flightCart-container {
   background-color: lightgray;
   margin-left: 5px;
-  border: solid;
+  border: solid 1px;
   margin-right: 10px;
+  margin-left: 20px;
 }
 
 #flightTable {
@@ -56,18 +66,26 @@ table tr td {
 #edit {
   background-color: #9acd32;
   color: white;
+  border: none;
+  border-radius: 2px;
 }
 #remove {
   background-color: #aa0000;
   color: white;
+  border: none;
+  border-radius: 2px;
 }
 .increase {
   background-color: #0066b2;
   color: white;
+  border: none;
+  border-radius: 2px;
 }
 .decrease {
   background-color: #aa0000;
   color: white;
+  border: none;
+  border-radius: 2px;
 }
 body {
   font-family: Arial, Helvetica, sans-serif;
@@ -88,30 +106,50 @@ body {
   font-weight: bold;
 }
 
-body.form {
-  right: 0;
-}
-
-body.field-container {
+/* body.field-container {
   transform: translate(-250px);
-}
+} */
 
+label{
+  display: block;
+  font-weight: bold;
+  font-size: 0.8em;
+  color: #333;
+  margin: 16px 0 6px;
+}
+input{
+  padding: 6px;
+  border: 1px solid #e1e1e1;
+  border-radius: 4px;
+}
+footer a{
+  text-align: center;
+  display: block;
+  color: #999;
+  margin-top: 40px;
+  font-size: 0.7em;
+}
+.field{
+  display: inline-block;
+  margin: 0 10px;
+}
 .form {
+  margin-top: 20px;
+  background-color: #0066b2;
+  color: white;
   display: none;
-  position: fixed;
-  height: 0px;
-  top: 0;
-  right: -400px;
-  bottom: 0;
-  border: 3px solid #f1f1f1;
-  transition: 0.5s;
-  transform: translateX(-400px);
+  position: sticky;
+  top: 20px;
+  max-height: 80vh;
+  max-width: fit-content;
+  overflow-y: auto;
 }
 
 .main-form {
-  max-width: 300px;
+  max-width: 2000px;
   padding: 10px;
   background-color: white;
+  display: flex;
 }
 
 .main-form input[type="text"],
@@ -128,20 +166,27 @@ body.field-container {
   background-color: #ddd;
   outline: none;
 }
-
+.main-form button{
+  margin: 35px 20px;
+  padding: auto;
+  height: 40px;
+  width: 90px;
+  border-radius: 5px;
+}
 .main-form .btn {
   background-color: #04aa6d;
   color: white;
   padding: 16px 20px;
   border: none;
   cursor: pointer;
-  width: 100%;
-  margin-bottom: 10px;
+  padding: 10px;
   opacity: 0.8;
+  margin-right: 10px;
 }
 
 .main-form .cancel {
   background-color: red;
+  padding: 5px;
 }
 
 .main-form .btn:hover,
@@ -149,19 +194,9 @@ body.field-container {
   opacity: 1;
 }
 
-@media only screen and (max-width: 1200px) {
+@media only screen and (max-width: 768px) {
   .form {
-    height: 100%;
+    max-height: 60vh;
   }
 }
 
-@media only screen and (max-width: 992px) {
-  .form {
-    height: 90%;
-  }
-}
-@media only screen and (max-width: 480px) {
-  .form {
-    height: 60%;
-  }
-}
